# cpp-gtest

./: .gitignore  CMakeLists.txt
include/: rando.h
src/: rando.cpp  randoTest.cpp
